--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,8 +1,8 @@
 ---
 
 node_exporter_version: 0.17.0
+node_exporter_force_install: false
 node_exporter_web_listen_address: "0.0.0.0:9100"
-
 node_exporter_system_group: "node-exporter"
 node_exporter_system_user: "{{ node_exporter_system_group }}"
 
