feat(defaults): exclude ^/snap and ^/run mounpoints

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,7 +9,7 @@ node_exporter_system_user: "{{ node_exporter_system_group }}"
 node_exporter_enabled_collectors:
   - systemd
   - filesystem:
-      ignored-mount-points: "^/(sys|proc|dev)($|/)"
+      ignored-mount-points: "^/(sys|proc|dev|run|snap)($|/)"
       ignored-fs-types: "^(sys|proc|auto)fs$"
 
 node_exporter_disabled_collectors: []
