fix: fix linting errors

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,7 +1,6 @@
 ---
-
 - name: restart node_exporter
-  systemd:
+  ansible.builtin.systemd:
     daemon_reload: true
     name: node_exporter
     state: restarted
