--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -1,7 +1,6 @@
 ---
-
 - name: Copy the Node Exporter systemd service file
-  template:
+  ansible.builtin.template:
     src: node_exporter.service.j2
     dest: /etc/systemd/system/node_exporter.service
     owner: root
