fix: use FQCN for builtin module actions and other lint fixes

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -44,5 +44,5 @@
     mode: 0750
     owner: "{{ node_exporter_system_user }}"
     group: "{{ node_exporter_system_group }}"
-  notify: restart node_exporter
+  notify: Restart node_exporter
   when: not ansible_check_mode
