--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: restart node_exporter
+- name: Restart node_exporter
   ansible.builtin.systemd:
     daemon_reload: true
     name: node_exporter
