--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,10 +4,12 @@
     path: "/usr/local/bin/node_exporter"
   register: node_exporter_binary
 
-- include_tasks: install.yml
+- name: Install node_exporter
+  ansible.builtin.include_tasks: install.yml
   when: not node_exporter_binary.stat.exists or node_exporter_force_install
 
-- import_tasks: configure.yml
+- name: Configure node_exporter
+  ansible.builtin.import_tasks: configure.yml
   tags:
     - node_exporter.configure
 
